[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/room/Room.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/Archivo_Black/ArchivoBlack_Huge.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/Archivo_Black/ArchivoBlack_Small.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/ChaosObject/Books_in_Shelve/Books.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/ChaosObject/Dishes/Dishes.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/ChaosObject/Paperwork/Paperwork.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/ChaosObject/Trashcan/Trashcan.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Clock/Clock.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/ChaosObject/Plants/Plants.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/shirt/shirt.png" type="Texture" id=10]
[ext_resource path="res://scenes/Title/Title.gd" type="Script" id=11]
[ext_resource path="res://scenes/Title/logo.png" type="Texture" id=12]

[sub_resource type="Environment" id=1]
background_mode = 1
background_color = Color( 0.678431, 0.960784, 1, 1 )
fog_color = Color( 0, 0, 0, 1 )
fog_depth_begin = 5.0
fog_depth_end = 30.0
glow_enabled = true
glow_intensity = 0.5
glow_strength = 1.1
glow_bloom = 0.5
glow_hdr_threshold = 1.5

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Spatial:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Spatial/CamBase:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "pan"
length = 16.0
loop = true
step = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Spatial/CamBase:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4, 8, 12, 16 ),
"transitions": PoolRealArray( 0.5, 2, 0.5, 2, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 30, 0 ), Vector3( 0, 0, 0 ), Vector3( 0, -30, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Title" type="Node"]
script = ExtResource( 11 )

[node name="Spatial" type="Spatial" parent="."]

[node name="Room" parent="Spatial" instance=ExtResource( 1 )]

[node name="CamBase" type="Spatial" parent="Spatial"]

[node name="Camera" type="Camera" parent="Spatial/CamBase"]
transform = Transform( 0.685921, -0.324014, 0.651558, 0, 0.895396, 0.445272, -0.727676, -0.305421, 0.614171, 7.35889, 4.76353, 7.02919 )
environment = SubResource( 1 )
fov = 20.3828
near = 0.1
__meta__ = {
"_editor_description_": ""
}

[node name="Clock" parent="Spatial" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.96829, 0.0363536, 0.238895 )
autostart = true

[node name="Plants" parent="Spatial" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2032, -0.47379, 0.245138 )
chaos_level = 4

[node name="Books" parent="Spatial" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.9398, -0.0997759, -0.956816 )
chaos_level = 4

[node name="Trashcan" parent="Spatial" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.70177, -1.02191, 0.185243 )
chaos_level = 4

[node name="Paperwork" parent="Spatial" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.69967, -0.578373, -0.375962 )
chaos_level = 4

[node name="Dishes" parent="Spatial" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.72697, -0.555544, -1.41877 )
chaos_level = 4

[node name="Shirts" type="Spatial" parent="Spatial"]

[node name="Sprite3D" type="Sprite3D" parent="Spatial/Shirts"]
transform = Transform( 0.536269, 0, 0.844047, 0, 1, 0, -0.844047, 0, 0.536269, -0.032, -1, 0 )
modulate = Color( 0.905882, 0.501961, 0.117647, 1 )
pixel_size = 0.001
axis = 1
shaded = true
texture = ExtResource( 10 )

[node name="Sprite3D3" type="Sprite3D" parent="Spatial/Shirts"]
transform = Transform( -0.411324, 0, -0.911489, 0, 1, 0, 0.911489, 0, -0.411324, 0.867034, -1, 1.02198 )
modulate = Color( 0.905882, 0, 0.0588235, 1 )
pixel_size = 0.001
axis = 1
shaded = true
texture = ExtResource( 10 )

[node name="Sprite3D4" type="Sprite3D" parent="Spatial/Shirts"]
transform = Transform( -0.81137, 0, -0.584533, 0, 1, 0, 0.584533, 0, -0.81137, -0.462307, -1, 0.583988 )
modulate = Color( 0.635294, 0.0156863, 0.905882, 1 )
pixel_size = 0.001
axis = 1
shaded = true
texture = ExtResource( 10 )

[node name="Sprite3D5" type="Sprite3D" parent="Spatial/Shirts"]
transform = Transform( -0.524803, 0, 0.851224, 0, 1, 0, -0.851224, 0, -0.524803, -0.293258, -1, 0.745353 )
modulate = Color( 0.905882, 0.501961, 0.117647, 1 )
pixel_size = 0.001
axis = 1
shaded = true
texture = ExtResource( 10 )

[node name="Sprite3D6" type="Sprite3D" parent="Spatial/Shirts"]
transform = Transform( -0.965395, 0, -0.260791, 0, 1, 0, 0.260791, 0, -0.965395, -0.677461, -1, 1.27555 )
modulate = Color( 0.447059, 0.905882, 0.392157, 1 )
pixel_size = 0.001
axis = 1
shaded = true
texture = ExtResource( 10 )

[node name="Sprite3D7" type="Sprite3D" parent="Spatial/Shirts"]
transform = Transform( -0.965395, 0, -0.260791, 0, 1, 0, 0.260791, 0, -0.965395, -1.392, -0.7, 1.083 )
modulate = Color( 0.843137, 0.905882, 0.133333, 1 )
pixel_size = 0.001
axis = 1
shaded = true
texture = ExtResource( 10 )

[node name="Sprite3D8" type="Sprite3D" parent="Spatial/Shirts"]
transform = Transform( 0.307124, 0, -0.951669, 0, 1, 0, 0.951669, 0, 0.307124, -1.23832, -0.7, 1.15216 )
modulate = Color( 0.0313726, 0.301961, 0.756863, 1 )
pixel_size = 0.001
axis = 1
shaded = true
texture = ExtResource( 10 )

[node name="Sprite3D2" type="Sprite3D" parent="Spatial/Shirts"]
transform = Transform( 0.984808, 0, 0.173648, 0, 1, 0, -0.173648, 0, 0.984808, -0.032, -1, 0.925 )
modulate = Color( 0.447059, 0.905882, 0.392157, 1 )
pixel_size = 0.001
axis = 1
shaded = true
texture = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "pan"
anims/RESET = SubResource( 2 )
anims/pan = SubResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Logo" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_right = 512.0
margin_bottom = 214.0
texture = ExtResource( 12 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 214.0
margin_right = -16.0
margin_bottom = -16.0

[node name="TitleLabel" type="Label" parent="Control/VBoxContainer"]
visible = false
margin_top = 218.0
margin_right = 1024.0
margin_bottom = 324.0
custom_fonts/font = ExtResource( 2 )
text = "Kuddelmuddel"
align = 1

[node name="Label2" type="Label" parent="Control/VBoxContainer"]
margin_right = 992.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
text = "*means \"mess\" in German"
align = 2

[node name="CenterContainer" type="CenterContainer" parent="Control/VBoxContainer"]
margin_top = 23.0
margin_right = 992.0
margin_bottom = 307.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayButton" type="Button" parent="Control/VBoxContainer/CenterContainer"]
margin_left = 453.0
margin_top = 121.0
margin_right = 538.0
margin_bottom = 163.0
text = "play"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 311.0
margin_right = 992.0
margin_bottom = 370.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer"]
margin_right = 292.0
margin_bottom = 59.0
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 292.0
margin_bottom = 36.0
text = "TheUnusualArt"
align = 1

[node name="Label2" type="Label" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 292.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 3 )
text = "2D and 3D Art"
align = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer"]
margin_left = 296.0
margin_right = 696.0
margin_bottom = 59.0
size_flags_horizontal = 3
alignment = 1

[node name="Label2" type="Label" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer3"]
margin_top = 8.0
margin_right = 400.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 3 )
text = "Made for Ludum Dare 50: Delay the inevitable"
align = 1

[node name="Label3" type="Label" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer3"]
margin_top = 31.0
margin_right = 400.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 3 )
text = "April 2022"
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer"]
margin_left = 700.0
margin_right = 992.0
margin_bottom = 59.0
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 292.0
margin_bottom = 36.0
text = "Tianmaru"
align = 1

[node name="Label2" type="Label" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 40.0
margin_right = 292.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 3 )
text = "Code and Music"
align = 1

[node name="Transition" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Transition"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Transition"]
anims/RESET = SubResource( 4 )
anims/fade_out = SubResource( 5 )

[connection signal="button_down" from="Control/VBoxContainer/CenterContainer/PlayButton" to="." method="_on_PlayButton_button_down"]
[connection signal="animation_finished" from="Transition/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
